--- a/src/views/main.html
+++ b/src/views/main.html
@@ -14,7 +14,7 @@
         <h4>Web Development Tools</h4>
         <ul>
             <li class="logo-holder" ng-repeat="tool in resumeDetails.technologies.webDev">
-                <img ng-src="#/src/logos/{{tool}}.svg" class="logo" />{{tool}}</li>
+                <img ng-src="src/logos/{{tool}}.svg" class="logo" />{{tool}}</li>
         </ul>
     </div>
 
