--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,7 @@ body
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    font-family: Segoe UI;
+    font-family: Segoe UI ;
     color: white;
 }
 
@@ -36,6 +36,8 @@ b
 p
 {
     letter-spacing: .75px;
+    font-weight: 100 !important;
+    font-size: 110%;
 }
 
 ul
@@ -211,14 +213,11 @@ nav .nav-menu
 {
     -webkit-animation-name: rollIn;
     animation-name: rollIn;
-
-    animation-duration: 1s;	
-	-webkit-animation-duration: 1s;
-
-	animation-timing-function: ease;	
-	-webkit-animation-timing-function: ease;
-    visibility: visible ;		
-
+    animation-duration: 1s;
+    -webkit-animation-duration: 1s;
+    animation-timing-function: ease;
+    -webkit-animation-timing-function: ease;
+    visibility: visible;
 }
 
 /* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
@@ -260,13 +259,150 @@ nav .nav-menu
 .rollOut
 {
     -webkit-animation-name: rollOut;
-    animation-name: rollOut;   
-
-	animation-duration: 1s;	
-	-webkit-animation-duration: 1s;
-
-	animation-timing-function: ease;	
-	-webkit-animation-timing-function: ease;	
-
+    animation-name: rollOut;
+    animation-duration: 1s;
+    -webkit-animation-duration: 1s;
+    animation-timing-function: ease;
+    -webkit-animation-timing-function: ease;
     visibility: hidden !important;
+}
+
+
+
+
+
+
+@keyframes rotateFall
+{
+    0%
+    {
+        transform: rotateZ(0deg);
+    }
+
+    20%
+    {
+        transform: rotateZ(10deg);
+        animation-timing-function: ease-out;
+    }
+
+    40%
+    {
+        transform: rotateZ(17deg);
+    }
+
+    60%
+    {
+        transform: rotateZ(16deg);
+    }
+
+    100%
+    {
+        transform: translateY(100%) rotateZ(17deg);
+    }
+}
+
+/* slide in from the bottom */
+@keyframes slideOutLeft
+{
+    to
+    {
+        transform: translateX(-100%);
+    }
+}
+
+/* rotate out newspaper */
+@keyframes rotateOutNewspaper
+{
+    to
+    {
+        transform: translateZ(-3000px) rotateZ(360deg);
+        opacity: 0;
+    }
+}
+
+/* entering animations --------------------------------------- */
+/* scale up */
+@keyframes scaleUp
+{
+    from
+    {
+        opacity: 0.3;
+        -webkit-transform: scale(0.8);
+    }
+}
+
+/* slide in from the right */
+@keyframes slideInRight
+{
+    from
+    {
+        transform: translateX(100%);
+    }
+
+    to
+    {
+        transform: translateX(0);
+    }
+}
+
+/* slide in from the bottom */
+@keyframes slideInUp
+{
+    from
+    {
+        transform: translateY(100%);
+    }
+
+    to
+    {
+        transform: translateY(0);
+    }
+}
+
+
+.ng-enter
+{
+    animation: scaleUp 0.5s both ease-in;
+    z-index: 8888;
+}
+
+.ng-leave
+{
+    animation: slideOutLeft 0.5s both ease-in;
+    z-index: 9999;
+}
+
+
+.page-home.ng-enter
+{
+    animation: scaleUp 0.5s both ease-in;
+}
+
+.page-home.ng-leave
+{
+    transform-origin: 0% 0%;
+    animation: rotateFall 1s both ease-in;
+}
+
+/* about ------------------------ */
+.page-about.ng-enter
+{
+    animation: slideInRight 0.5s both ease-in;
+}
+
+.page-about.ng-leave
+{
+    animation: slideOutLeft 0.5s both ease-in;
+}
+
+/* contact ---------------------- */
+.page-contact.ng-leave
+{
+    transform-origin: 50% 50%;
+    animation: rotateOutNewspaper .5s both ease-in;
+}
+
+.page-contact.ng-enter
+{
+    animation: slideInUp 0.5s both ease-in;
 }
