--- a/src/views/main.html
+++ b/src/views/main.html
@@ -1,6 +1,6 @@
 ﻿<div class="pt-page-rotateFall pt-page-scaleUp">
-    <div class="col-md-4 ">
-        <div class="text-right">
+    <div class="col-md-4 text-right">
+        <div class="">
             <img src="https://scontent-hkg3-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/11112941_969227929768979_9115772204709869925_n.jpg?oh=eb54fd73b6e34149f831d259de4b99ba&oe=5675EAF5" class="img img-rounded owner-pic">
             <h2 class="text-right"><b>{{resumeDetails.name}}</b></h2>
             <p class="text-right"><i class="fa fa-home fa-lg"></i> {{resumeDetails.address}}</p>
