--- a/src/views/main.html
+++ b/src/views/main.html
@@ -8,9 +8,9 @@
             <p class="text-right"><i class="fa fa-mobile fa-lg"></i> {{resumeDetails.cellphoneNum}}</p>
             <p class="text-right"><i class="fa fa-github-square fa-lg"></i> {{resumeDetails.github}}</p>
             <p class="text-right"><i class="fa fa-facebook-official fa-lg"></i> {{resumeDetails.facebook}}</p>
-            <hr>
+            <!--<hr>-->
         </div>
-        <h3><i class="fa fa-laptop"></i><b>Technologies</b></h3>
+        <!--<h3><i class="fa fa-laptop"></i><b>Technologies</b></h3>
         <div class="logo-group col-md-12 col-sm-12 col-xs-12">
             <h4>Web Development Tools</h4>
             <ul>
@@ -44,7 +44,7 @@
                     <img ng-src="src/logos/{{taskRunner}}.svg" class="logo" />
                     {{taskRunner}}</li>
             </ul>
-        </div>
+        </div>-->
 
     </div>
     <div class="col-md-8 pull-left">
