updated background color to blue

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 body
 {    
-    background: rgb(0,38,58);
+    background: black;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
