--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -35,6 +35,15 @@ b
     font-weight: 400;
 }
 
+hr
+{
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255,255,255,0.2), rgba(0, 0, 0, 0));
+    margin-top: 20px !important;
+    margin-bottom: 20px !important;
+}
+
 p
 {
     letter-spacing: .75px;
@@ -108,24 +117,15 @@ div.footer
     }
 }
 
-@media print
+.container
 {
-    .footer
-    {
-        display: none;
-        visibility: hidden;
-    }
+    max-width: 1000px;
+     margin-top: 5%;
 }
-
 
 section.welcome
 {
     max-width: 500px;
-}
-
-.container
-{
-    margin-top: 5%;
 }
 
 nav .container-fluid
