updated the connect page

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -176,6 +176,16 @@ nav .nav-menu
         color: rgb(0,38,58);
     }
 
+.btn
+{
+    color: white;
+}
+
+    .btn:hover
+    {
+        color: cyan;
+    }
+
 
 @-webkit-keyframes rollIn
 {
