--- a/src/views/connect.html
+++ b/src/views/connect.html
@@ -1,4 +1,27 @@
-﻿<section class="text-center">
-    <h1>Connect</h1>
-    <h1>Under construction</h1>
+﻿<section>
+    <div class="col-md-10">
+        <h1>Connect</h1>
+        <p>Hi, I'm currently working in Manila. If you want to hire me, don't hesitate to contact at <a class="btn" href="mailto:kenneth.bolico@gmail.com"><b>kenneth.bolico@gmail.com</b></a>.</p>
+        <p>Know me better by visiting my online profiles below.</p>
+    </div>
+    <div class="col-md-12 text-center">
+        <div class="col-md-4 col-sm-4 col-xs-6">
+            <a href="https://facebook.com/kenneth.bolico" target="_blank" class="btn"><i class="fa fa-facebook-square fa-5x"></i>&nbsp;Facebook</a>
+        </div>
+        <div class="col-md-4 col-sm-4  col-xs-6">
+            <a href="http://ph.linkedin.com/in/kennethbolico" class="btn" target="_blank"><i class="fa fa-linkedin-square fa-5x"></i>&nbsp;LinkedIn</a>
+        </div>
+        <div class="col-md-4 col-sm-4  col-xs-6">
+            <a href="https://twitter.com/kenezokun" target="_blank" class="btn"><i class="fa fa-twitter-square fa-5x"></i>&nbsp;Twitter</a>
+        </div>
+        <div class="col-md-4 col-sm-4  col-xs-6">
+            <a href="https://github.com/kenblizzard" target="_blank" class="btn"><i class="fa fa-github-square fa-5x"></i>&nbsp;Github</a>
+        </div>
+        <div class="col-md-4 col-sm-4  col-xs-6">
+            <a href="mailto:kenneth.bolico@gmail.com" target="_blank" class="btn"><i class="fa fa-at fa-5x"></i>&nbsp;Email</a>
+        </div>
+        <div class="col-md-4 col-sm-4  col-xs-6">
+            <a href="" class="btn"><i class="fa fa-steam-square fa-5x"></i>&nbsp;Steam</a>
+        </div>
+    </div>
 </section>
