--- a/src/views/main.html
+++ b/src/views/main.html
@@ -12,50 +12,47 @@
 
     </div>
     <div class="col-md-9 pull-left">
-        <h3><i class="fa fa-star"></i><b>&nbsp;Objective</b></h3>
+        <h3><i class="fa fa-star fa-fw"></i><b>Objective</b></h3>
         <p>{{resumeDetails.objective}}</p>
         <hr>
 
-        <h3><i class="fa fa-graduation-cap"></i><b>&nbsp;Education</b></h3>
+        <h3><i class="fa fa-graduation-cap fa-fw"></i><b>Education</b></h3>
         <h4>{{resumeDetails.education.school}} <small class="pull-right">{{resumeDetails.education.year}}</small></h4>
         <p>{{resumeDetails.education.location}}</p>
         <p>{{resumeDetails.education.course}} </p>
 
         <hr>
-        <h3><i class="fa fa-certificate"></i><b>&nbsp;Experiences</b></h3>
+        <h3><i class="fa fa-certificate fa-fw"></i><b>Experiences</b></h3>
         <div ng-repeat="exp in resumeDetails.experience">
             <h4><b>{{exp.employer}}</b> <small class="pull-right">{{exp.startDate | date: "MMM dd yyyy"}} - {{exp.endDate | date: "MMM dd yyyy"}}</small></h4>
             <p>{{exp.position}}</p>
         </div>
+
+        <h3><i class="fa fa-code fa-fw"></i>Skills</h3>
+        <div class="col-md-4">
+            <h4>Most Experienced</h4>
+            <ul>
+                <li ng-repeat="skill in resumeDetails.skills.mostExperienced">{{skill}}
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-4">
+            <h4>Basic Knowledge</h4>
+            <ul>
+                <li ng-repeat="skill in resumeDetails.skills.basicKnowledge">{{skill}}
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-4">
+            <h4>Tools</h4>
+            <ul>
+                <li ng-repeat="skill in resumeDetails.skills.tools">{{skill}}
+                </li>
+            </ul>
+        </div>
+
     </div>
 
 </section>
 <section>
-    <div class="col-md-12">
-        <h1>Skills</h1>
-        <div class="col-md-4">            
-            <h2>Most Experienced</h2>
-            <ul>
-                <li ng-repeat="skill in resumeDetails.skills.mostExperienced">
-                    {{skill}}
-                </li>
-            </ul>
-        </div>
-        <div class="col-md-4">            
-            <h2>Basic Knowledge</h2>
-            <ul>
-                <li ng-repeat="skill in resumeDetails.skills.basicKnowledge">
-                    {{skill}}
-                </li>
-            </ul>
-        </div>
-         <div class="col-md-4">            
-            <h2>Tools</h2>
-            <ul>
-                <li ng-repeat="skill in resumeDetails.skills.tools">
-                    {{skill}}
-                </li>
-            </ul>
-        </div>
-    </div>
 </section>
