--- a/src/views/connect.html
+++ b/src/views/connect.html
@@ -1,4 +1,4 @@
-﻿<section>
+﻿<section>    
     <div class="col-md-10">
         <h1>Connect</h1>
         <p>Hi, I'm currently working in Manila. If you want to hire me, don't hesitate to contact at <a class="btn" href="mailto:kenneth.bolico@gmail.com"><b>kenneth.bolico@gmail.com</b></a>.</p>
@@ -24,4 +24,6 @@
             <a href="" class="btn"><i class="fa fa-steam-square fa-5x"></i>&nbsp;Steam</a>
         </div>
     </div>
+    <a href="#/" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-5x"></i></a>
+    <a href="#/works" class="page-link left"><i class="glyphicon glyphicon-chevron-left fa-5x"></i></a>
 </section>
