--- a/src/views/welcome.html
+++ b/src/views/welcome.html
@@ -1,5 +1,5 @@
 ﻿<section class="text-center center-block welcome" >
-    <img class="img-circle" style="max-width: 200px;" src="src/images/kenneth.jpg" />
+    <img class="img-circle my-pic" style="max-width: 200px;" src="src/images/kenneth.jpg" />
     <h1>Hello, I'm Kenneth Bolico</h1>
     <p>
         I'm a Web Back-End and Front-End Developer. My main interest/skills are in Javascript technologies such as
@@ -7,12 +7,13 @@
         Java, Php, Laravel, PostgresSQL, MySQL etc.
         <br />
         <br />
-        I am a very passionate developer. Learning new things is very addicting, so whenever an opportunity to learn comes, I grab it.
+        I am a very passionate developer. Learning new things is a hard habit to break, so whenever an opportunity to learn comes, I grab it.
         <br />
         <br />
         Pizza is LOVE. Code is LOVE.
     </p>
 </section>
+<a href="#/me" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-5x"></i></a>
 <!--<div class="pull-right" style="position: absolute; right: 0px;">
     <i class="glyphicon glyphicon-chevron-right" ></i>
 </div>-->
