--- a/src/views/works.html
+++ b/src/views/works.html
@@ -1,4 +1,6 @@
 ﻿<section class="text-center">
+    <a href="#/connect" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-5x"></i></a>
+    <a href="#/me" class="page-link left"><i class="glyphicon glyphicon-chevron-left fa-5x"></i></a>
     <h1>Works</h1>
     <h1>Under construction</h1>
 </section>
