--- a/src/views/main.html
+++ b/src/views/main.html
@@ -1,4 +1,6 @@
 ﻿<section>
+    <a href="#/works" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-4x"></i></a>
+    <a href="#/" class="page-link left"><i class="glyphicon glyphicon-chevron-left fa-4x"></i></a>
     <div class="col-md-3 text-left">
         <div class="col-md-12 col-sm-4 col-xs-12">
             <img src="src/images/kenneth.jpg" class="img img-rounded owner-pic center-block">
