updated background color and font color. updated link animations

--- a/src/css/animated-nav-btn.css
+++ b/src/css/animated-nav-btn.css
@@ -27,6 +27,11 @@ button {
     text-decoration: none;
 }
 
+    .grid-button .grid:hover
+    {
+        color: whitesmoke;
+        background: whitesmoke;
+    }
     .grid-button .grid {
         width: 1rem;
         height: 1rem;
