--- a/src/views/welcome.html
+++ b/src/views/welcome.html
@@ -2,15 +2,13 @@
     <img class="img-circle my-pic" style="max-width: 200px;" src="src/images/kenneth.jpg" />
     <h1>Hello, I'm Kenneth Bolico</h1>
     <p>
-        I'm a Web Back-End and Front-End Developer. My main interest/skills are in Javascript technologies such as
+        I'm a Software Engineer with more than a year of experience. My main interest/skills are Web Development using technologies such as
         NodeJS, AngularJS, BackboneJS, JQuery, and many more, and NoSQL database like MongoDB. Also have experience and knowledge in other technologies like C#, 
         Java, Php, Laravel, PostgresSQL, MySQL etc.
         <br />
         <br />
-        I am a very passionate developer. Learning new things is a hard habit to break, so whenever an opportunity to learn comes, I grab it.
         <br />
-        <br />
-        Pizza is LOVE. Code is LOVE.
+        Pizza is LOVE. Code is LOVE. DOTA is LOVE.
     </p>
 </section>
 <a href="#/me" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-5x"></i></a>
