--- a/src/views/welcome.html
+++ b/src/views/welcome.html
@@ -2,13 +2,14 @@
     <img class="img-circle my-pic" style="max-width: 200px;" src="src/images/kenneth.jpg" />
     <h1>Hello, I'm Kenneth Bolico</h1>
     <p>
-        I'm a Software Engineer with more than a year of experience. My main interest/skills are Web Development using technologies such as
-        NodeJS, AngularJS, BackboneJS, JQuery, and many more, and NoSQL database like MongoDB. Also have experience and knowledge in other technologies like C#, 
-        Java, Php, Laravel, PostgresSQL, MySQL etc.
+        I'm a Software Engineer with experience in developing Web applications using latest front-end tools such as Javascript frameworks like <b>JQuery, BackboneJS, AngularJS,</b> and <b>Bootstrap CSS, </b> and server-side and database technologies such as <b>NodeJS, Java Spring Framework, Mongodb, Firebase,</b> and <b>SQL databases.</b>
+		<br/>
+		<br/>
+		I also have basic knowledge in developing Mobile Applications using <b>Java (Android Development Studio) and React-native.</b>
         <br />
         <br />
         <br />
-        Pizza is LOVE. Code is LOVE. DOTA is LOVE.
+        Pizza is LOVE <i class="em em-pizza"></i>. Code is LOVE <i class="em em-computer"></i>. DOTA is LOVE.<i class="em em-video_game"></i>
     </p>
 </section>
 <a href="#/me" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-5x"></i></a>
