--- a/src/views/main.html
+++ b/src/views/main.html
@@ -3,7 +3,7 @@
     <a href="#/" class="page-link left"><i class="glyphicon glyphicon-chevron-left fa-5x"></i></a>
     <div class="col-md-3 text-left">
         <div class="col-md-12 col-sm-4 col-xs-12">
-            <img src="src/images/kenneth.jpg" class="img img-rounded owner-pic center-block">
+            <img src="src/images/dp.jpg" class="img img-rounded owner-pic center-block">
         </div>
         <div class="col-md-12 col-sm-8 col-xs-12">
             <h2><b>{{resumeDetails.name}}</b></h2>
