--- a/src/views/welcome.html
+++ b/src/views/welcome.html
@@ -1,5 +1,5 @@
 ﻿<section class="text-center center-block welcome" >
-    <img class="img-circle my-pic" style="max-width: 200px;" src="src/images/kenneth.jpg" />
+    <img class="img-circle my-pic" style="max-width: 200px;" src="src/images/dp.jpg" />
     <h1>Hello, I'm Kenneth Bolico</h1>
     <p>
         I'm a Software Engineer with experience in developing Web applications using latest front-end tools such as Javascript frameworks like <b>JQuery, BackboneJS, AngularJS,</b> and <b>Bootstrap CSS, </b> and server-side and database technologies such as <b>NodeJS, Java Spring Framework, Mongodb, Firebase,</b> and <b>SQL databases.</b>
