--- a/src/views/works.html
+++ b/src/views/works.html
@@ -1,15 +1,31 @@
-﻿<section class="text-center">
+﻿
+<script>
+    function computeTransactionFee() {
+        var numberShares = document.getElementById('numShares').value;
+        var numPricePerShare = document.getElementById('numPricePerShare').value;
+        var commission = (numberShares * numPricePerShare) * 0.025;
+        var vat = commission * 0.12;
+        var PSEtransFee = (numberShares * numPricePerShare) * 0.0005;
+        var SCCP = (numberShares * numPricePerShare) * 0.001;
+        
+        var total = commission + vat + PSEtransFee + SCCP
+        document.getElementById('totalFee').text = total;
+        
+    }
+    
+</script>
+<section class="text-center">
     <a href="#/connect" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-5x"></i></a>
     <a href="#/me" class="page-link left"><i class="glyphicon glyphicon-chevron-left fa-5x"></i></a>
     <h1>Works</h1>
      
-    <div class="panel panel-primary">
+    <div class="panel panel-primary col-md-6">
         <div class="panel-heading">
             <h2>COL Transaction Fee Calculator</h1>
         </div>
-        <div class="panel-body">
+        <div class="panel-body panel-warning">
     
-         <form class="col-md-6">
+         <form >
              <div class="form-group">
                 <label for="numShares">Shares</label>
                 <input type="number" class="form-control" id="numShares" placeholder="No. Of Shares">
@@ -31,25 +47,11 @@
                 </label>
             </div>
             <button type="submit" class="btn btn-success" onClick="computeTransactionFee()">Submit</button>
-            <div class="form-group">
-                <label class="control-label">Email</label>            
+            <div class="form-group row">
+                <label class="control-label">Transaction Fee</label>            
                 <p class="form-control-static" id="totalFee"></p> 
              </div>
          </form>
     </div>
 </section>
-<script>
-    function computeTransactionFee() {
-        var numberShares = document.getElementById('numShares').value;
-        var numPricePerShare = document.getElementById('numPricePerShare').value;
-        var commission = (numberShares * numPricePerShare) * 0.025;
-        var vat = commission * 0.12;
-        var PSEtransFee = (numberShares * numPricePerShare) * 0.0005;
-        var SCCP = (numberShares * numPricePerShare) * 0.001;
-        
-        var total = commission + vat + PSEtransFee + SCCP
-        document.getElementById('totalFee').text = total;
-        
-    }
-    
-</script>
+
