--- a/src/views/works.html
+++ b/src/views/works.html
@@ -45,6 +45,10 @@
                     <label class="control-label">Transaction Fee</label>            
                     <span class="form-control-static" id="totalFee"></span> 
                  </div>
+                 <div class="form-group row">
+                    <label class="control-label">Total Price</label>            
+                    <span class="form-control-static" id="totalPrice"></span> 
+                 </div>
              </form>
         </div>
     </div>
