--- a/src/views/welcome.html
+++ b/src/views/welcome.html
@@ -2,10 +2,10 @@
     <img class="img-circle my-pic" style="max-width: 200px;" src="src/images/dp.jpg" />
     <h1>Hello, I'm Kenneth Bolico</h1>
     <p>
-        I'm a Software Engineer with experience in developing Web applications using latest front-end tools such as Javascript frameworks like <b>JQuery, BackboneJS, AngularJS,</b> and <b>Bootstrap CSS, </b> and server-side and database technologies such as <b>NodeJS, Java Spring Framework, Mongodb, Firebase,</b> and <b>SQL databases.</b>
+        I'm a Software Engineer who specializes in developing Web Applications using <b>Java, Javascript, BackboneJS, AngularJS,</b> and <b>Bootstrap CSS, </b> <b>NodeJS, Java Spring Framework, Mongodb, </b> and <b>SQL databases.</b>
 		<br/>
 		<br/>
-		I also have basic knowledge in developing Mobile Applications using <b>Java (Android Development Studio) and React-native.</b>
+		I love to learn and surpassing myself is my daily challenge.</b>
         <br />
         <br />
         <br />
