--- a/src/views/connect.html
+++ b/src/views/connect.html
@@ -25,5 +25,5 @@
         </div>
     </div>
     <a href="#/" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-5x"></i></a>
-    <a href="#/works" class="page-link left"><i class="glyphicon glyphicon-chevron-left fa-5x"></i></a>
+    <a href="#/me" class="page-link left"><i class="glyphicon glyphicon-chevron-left fa-5x"></i></a>
 </section>
