--- a/src/views/main.html
+++ b/src/views/main.html
@@ -1,5 +1,5 @@
 ﻿<section>
-    <a href="#/works" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-5x"></i></a>
+    <a href="#/connect" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-5x"></i></a>
     <a href="#/" class="page-link left"><i class="glyphicon glyphicon-chevron-left fa-5x"></i></a>
     <div class="col-md-3 text-left">
         <div class="col-md-12 col-sm-4 col-xs-12">
