--- a/src/views/works.html
+++ b/src/views/works.html
@@ -3,54 +3,17 @@
     
 </script>
 <section class="text-center">
-    <a href="#/connect" class="page-link right"><i class="glyphicon glyphicon-chevron-right fa-5x"></i></a>
-    <a href="#/me" class="page-link left"><i class="glyphicon glyphicon-chevron-left fa-5x"></i></a>
-    <h1>Works</h1>
+    <h2>Privacy Policy</h2>
+<p>Your privacy is important to us. It is Kenneth Bolico's policy to respect your privacy regarding any information we may collect from you across our website, <a href="http://kenblizzard.github.io">http://kenblizzard.github.io</a>, and other sites we own and operate.</p>
+<p>We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.</p>
+<p>We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorised access, disclosure, copying, use or modification.</p>
+<p>We don’t share any personally identifying information publicly or with third-parties, except when required to by law.</p>
+<p>Our website may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies.</p>
+<p>You are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services.</p>
+<p>Your continued use of our website will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.</p>
+<p>This policy is effective as of 31 December 2029.</p>
      
-    <div class="col-md-6">
-        <div class="panel panel-primary ">
-            <div class="panel-heading">
-                <h2>COL Transaction Fee Calculator</h1>
-            </div>
-            <div class="panel-body" style="background-color: rgb(0,38,58)">
-
-             <form >
-                 <div class="form-group">
-                    <label for="numShares">Shares</label>
-                    <input type="number" class="form-control" id="numShares" placeholder="No. Of Shares">
-                </div>
-                <div class="form-group">
-                    <label for="numPricePerShare">Price Per Share</label>
-                    <input type="number" class="form-control" id="numPricePerShare" placeholder="Price per Share">
-                </div>
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="optionsRadios" id="radioBuy" value="option1" checked>
-                        Buy
-                    </label>
-                </div>
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="optionsRadios" id="radioSell" value="option2">
-                        Sell
-                    </label>
-                </div>
-                 <div class="checkbox">
-                    <label>
-                      <input type="checkbox" id="checkMinimum"> Include minimum transaction Fee of 20.00 PHP
-                    </label>
-                </div>
-                <button type="submit" class="btn btn-success" onClick="computeTransactionFee()">Submit</button>
-                <div class="form-group row">
-                    <label class="control-label">Transaction Fee</label>            
-                    <span class="form-control-static" id="totalFee"></span> 
-                 </div>
-                 <div class="form-group row">
-                    <label class="control-label">Total Price</label>            
-                    <span class="form-control-static" id="totalPrice"></span> 
-                 </div>
-             </form>
-        </div>
+    
     </div>
 </section>
 
