--- a/src/views/welcome.html
+++ b/src/views/welcome.html
@@ -2,7 +2,7 @@
     <img class="img-circle my-pic" style="max-width: 200px;" src="src/images/dp.jpg" />
     <h1>Hello, I'm Kenneth Bolico</h1>
     <p>
-        I'm a Software Engineer who specializes in developing Web Applications using <b>Java, Javascript, BackboneJS, AngularJS,</b> <b>Bootstrap CSS, </b> <b>NodeJS, Java Spring Framework, Mongodb, </b> and <b>SQL databases.</b>
+        Software Engineer x Adventurer
 		<br/>
 		<br/>
 		I love to learn and surpassing myself is my daily challenge.</b>
