--- a/src/views/main.html
+++ b/src/views/main.html
@@ -31,8 +31,8 @@
 	    <br/>
         </div>
 
-        <h3><i class="fa fa-code fa-fw"></i>Skills</h3>
-        <div class="col-sm-12">
+        <!-- <h3><i class="fa fa-code fa-fw"></i>Skills</h3> -->
+        <!-- <div class="col-sm-12">
             <h4>Most Experienced</h4>
             <div class=row>
                 <div ng-repeat="skill in resumeDetails.skills.mostExperienced" class="col  col-xs-6 col-sm-4 col-md-4" style="margin:20px 0px; min-height:150px; max-height:150px">
@@ -41,7 +41,7 @@
 				<text class="col-xs-12 text-left">{{skill}}</text>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!--<div class="col-md-4">
             <h4>Basic Knowledge</h4>
             <ul>
@@ -50,7 +50,7 @@
                 </li>
             </ul>
         </div> -->
-        <div class="col-sm-12">
+        <!-- <div class="col-sm-12">
             <h4>Tools</h4>
            <div class=row>
                 <div ng-repeat="skill in resumeDetails.skills.tools" class="col  col-xs-6 col-sm-4 col-md-4" style="margin:20px 0px; min-height:150px; max-height:150px">
@@ -59,7 +59,7 @@
 				<text class="col-xs-12 text-left">{{skill}}</text>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
