--- a/src/views/welcome.html
+++ b/src/views/welcome.html
@@ -1,6 +1,6 @@
 ﻿<section class="text-center center-block welcome" >
     <img class="img-circle my-pic" style="max-width: 200px;" src="src/images/dp.jpg" />
-    <h1>Hello, I'm Kenneth Bolico</h1>
+    <h1>Hello! I'm Kenneth Bolico</h1>
     <p>
         Software Engineer x Adventurer
 		<br/>
